# fluxor-samsui

./: README-BUILD.md  README.md  build-native-only.bat  build-native-only.sh  build-native.bat  build-native.sh  settings.gradle.kts
BlobStorageSwift/: Package.swift  README.md
BlobStorageSwift/Sources/BlobStorageSwift/: Message.swift  MessageType.swift
BlobStorageSwift/Tests/BlobStorageSwiftTests/: BlobStorageTests.swift
app/: build.gradle.kts
app/src/androidTest/java/com/fluxorio/: ExampleInstrumentedTest.kt  IoBridgeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  blob_storage.cpp  blob_storage.h  io_bridge.cpp  io_bridge.h  message_encryption.cpp  message_encryption.h  native-lib.cpp  socket_manager.cpp  socket_manager.h  thread_manager.cpp  thread_manager.h
app/src/main/java/com/fluxorio/: BlobStorage.kt  IoBridgeListener.kt  MainActivity.kt  Message.kt  MessageAdapter.kt  MessageList.kt  MessageStorage.kt
app/src/main/res/layout/: activity_main.xml  item_message.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fluxorio/: ExampleUnitTest.kt  MessageTest.kt
gradle/wrapper/: gradle-wrapper.properties
swift/: README.md
swift/Sources/BlobStorageSwift/: BlobStorage.swift
